reconnect on connection lost

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,8 +3,8 @@ CC = gcc
 CFLAGS = -Wall
 
 LIBS = ecore ecore-config ecore-evas edje esmart_trans_x11 xmms2-client xmms2-client-ecore
-HDR = error.h libs_setup.h gui.h config.h xmms_conn.h playback_cb.h
-SRC = main.c error.c gui.c libs_setup.c config.c xmms_conn.c playback_cb.c
+HDR = error.h libs_setup.h config.h xmms_conn.h status.h gui.h playback_cb.h
+SRC = main.c error.c libs_setup.c config.c xmms_conn.c gui.c playback_cb.c
 
 .PHONY: clean
 
